Fix Page Style Properly
-Set padding in the bottom to not be overlapped by the footer
-Remove inline style

--- a/src/assets/stylesheets/Footer.module.css
+++ b/src/assets/stylesheets/Footer.module.css
@@ -12,7 +12,7 @@
 
 .logo {
   height: 50px;
-  margin: 8px;
+  margin: 8px 18px 8px 8px;
 }
 
 .right {
